# rust-coding-for-beginners

./: Cargo.toml  Makefile  README.md
.github/: FUNDING.yml
.metals/: metals.h2.db
src/: helpers.rs  lib.rs
src/group/: g1.rs
