[package]
name = "p1"
version = "0.1.0"
authors = ["T Kumagai"]
edition = "2018"
exclude = [".github/*",".vscode/*","assets/*"]
homepage = "https://github.com/friendbear/rust-coding-for-beginners"
repository = "https://github.com/friendbear/rust-coding-for-beginners"

readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = [
    "cli",
    "terminal",
    "ui"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "demo"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
# https://docs.rs/thiserror/1.0.30/thiserror/
thiserror = "1.0.30"

structopt = { version = "0.3.25", default-features = false }