[package]
name = "p1"
version = "0.1.0"
authors = ["T Kumagai"]
edition = "2018"
exclude = [".github/*",".vscode/*","assets/*"]
homepage = "https://github.com/friendbear/rust-coding-for-beginners"
repository = "https://github.com/friendbear/rust-coding-for-beginners"

readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]
keywords = [
    "cli",
    "terminal",
    "ui"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "demo"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
# https://docs.rs/thiserror/1.0.30/thiserror/

structopt = { version = "0.3.25", default-features = false }

hyper = { version = "0.14", features = ["http1", "http2", "client", "stream"] }
hyper-tls = { version = "0.5", optional = true }
lazy_static = "1.4"
native-tls = { version = "0.2", optional = true }
hyper-rustls = { version = "0.22", optional = true, default-features = false }
thiserror = "1.0"
futures = "0.3"
tokio = { version = "1.29.1", features = ["full"] }
[features]
default = ["hyper-tls"]
native_tls = ["native-tls", "hyper-tls"]
